--- a/SemanticKernelWorkshop/ex-2-prompt-engineering/ex-2-prompt-engineering.csproj
+++ b/SemanticKernelWorkshop/ex-2-prompt-engineering/ex-2-prompt-engineering.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>ex2_prompt_engineering</RootNamespace>
+    <RootNamespace>ex_2_prompt_engineering</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
