--- a/SemanticKernelWorkshop/ex-2-prompt-engineering/ex-2-prompt-engineering.csproj
+++ b/SemanticKernelWorkshop/ex-2-prompt-engineering/ex-2-prompt-engineering.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.SemanticKernel.Experimental.Agents" Version="1.18.2-alpha" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LlmService\LlmService.csproj" />
+  </ItemGroup>
+  
 </Project>
