--- a/SemanticKernelWorkshop/ex-7-rag-with-files/ex-7-rag-with-files.csproj
+++ b/SemanticKernelWorkshop/ex-7-rag-with-files/ex-7-rag-with-files.csproj
@@ -16,5 +16,9 @@
   <ItemGroup>
     <Folder Include="resources/" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LlmService\LlmService.csproj" />
+  </ItemGroup>
   
 </Project>
