--- a/SemanticKernelWorkshop/ex-1-connect-to-llm/ex-1-connect-to-llm.csproj
+++ b/SemanticKernelWorkshop/ex-1-connect-to-llm/ex-1-connect-to-llm.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.22.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LlmService\LlmService.csproj" />
+  </ItemGroup>
+  
 </Project>
