--- a/SemanticKernelWorkshop/ex-6-introduction-to-rag/ex-6-introduction-to-rag.csproj
+++ b/SemanticKernelWorkshop/ex-6-introduction-to-rag/ex-6-introduction-to-rag.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.22.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LlmService\LlmService.csproj" />
+  </ItemGroup>
+  
 </Project>
