--- a/SemanticKernelWorkshop/ex-7-rag-with-files/ex-7-rag-with-files.csproj
+++ b/SemanticKernelWorkshop/ex-7-rag-with-files/ex-7-rag-with-files.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,6 +11,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory " Version="1.20.0-alpha" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.22.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
